(fix) add semi-transparents white circle behind chapter header

--- a/src/assets/scss/_content.scss
+++ b/src/assets/scss/_content.scss
@@ -91,8 +91,19 @@
 	[id^="chapter-"] > header {
 		position: relative;
 		background-position: bottom right;
-		background-size: 280px;
+		background-size: 260px;
 		background-repeat: no-repeat;
+		&:after {
+			content: "";
+			display: block;
+			width: 180px;
+			height: 180px;
+			border-radius: 50%;
+			background-color: rgba(255, 255, 255, 0.24);
+			position: absolute;
+			bottom: 40px;
+			right: 80px;
+		}
 	}
 	#chapter-1 > header { background-image: url(assets/images/chapters/chapter-1__bg.svg); }
 	#chapter-2 > header { background-image: url(assets/images/chapters/chapter-2__bg.svg); }
